# gambit_code_testing

./: .gitignore  BUILD_OPTIONS.md  CLAUDE.md  CMakeLists.txt  MINIMAL_BUILD.md  README.md  README_OSX.md  hdf5_printer_issues.md  optional.txt  quantum_gravity.html
.github/workflows/: ci_linux_GH.yml  cmake.yml  fmt.yaml
Backends/registration/: Backends_registration.cpp
Backends/scripts/: backend_harvester.py  list_backends.py
Backends/src/: backend_info.cpp  backend_initialiser.cpp  ini_functions.cpp
Backends/src/frontends/: Acropolis_1_2_1.cpp  AlterBBN_2_2.cpp  CalcHEP_3_6_27.cpp  DarkAges_1_2_0.cpp  DarkSUSY_5_1_3.cpp  DarkSUSY_MSSM_6_1_1.cpp  DarkSUSY_MSSM_6_2_2.cpp  DarkSUSY_MSSM_6_2_5.cpp  DarkSUSY_MSSM_6_4_0.cpp  MicrOmegas_MSSM_3_6_9_2.cpp  MicrOmegas_ScalarSingletDM_Z2_3_6_9_2.cpp  MicrOmegas_ScalarSingletDM_Z3_3_6_9_2.cpp  MontePythonLike_3_3_0.cpp  MontePythonLike_3_5_0.cpp  SPheno_3_3_8.cpp  SPheno_4_0_3.cpp  SUSY_HIT_1_5.cpp  SuperIso_4_1.cpp  plc_3_0.cpp  simple_xs_1_0.cpp
ColliderBit/: README.md
ColliderBit/doc/: refactoring_plan.md
ColliderBit/examples/: functors_for_CBS.cpp  solo.cpp
ColliderBit/registration/: ColliderBit_registration.cpp
ColliderBit/scripts/: collider_harvester.py
ColliderBit/src/: ColliderBit_Bfactories.cpp  ColliderBit_InterpolatedYields.cpp  ColliderBit_LEP.cpp  ColliderBit_measurements.cpp  ColliderBit_smoking.cpp  LHC_likelihoods.cpp  Utils.cpp  getHepMCEvent.cpp  getxsec.cpp  mt2w.cc
ColliderBit/src/analyses/: Analysis.cpp  Analysis_ATLAS_13TeV_0LEP_139invfb.cpp  Analysis_ATLAS_13TeV_0LEP_13invfb.cpp  Analysis_ATLAS_13TeV_0LEP_36invfb.cpp  Analysis_ATLAS_13TeV_2BoostedBosons_139invfb.cpp  Analysis_ATLAS_13TeV_2OSLEP_Z_139invfb.cpp  Analysis_ATLAS_13TeV_3LEP_139invfb.cpp  Analysis_ATLAS_13TeV_MONOJET_139infb.cpp  Analysis_ATLAS_13TeV_MultiLEP_strong_139invfb.cpp  Analysis_CMS_13TeV_MultiLEP_137invfb.cpp  Analysis_Covariance.cpp
ColliderBit/src/limits/: BaseLimitContainer.cpp  ImageLimit.cpp  OPALDegenerateCharginoLimits.cpp
Core/: CMakeLists.txt
Core/src/: container_factory.cpp  core.cpp  depresolver.cpp  diagnostics.cpp  gambit.cpp  likelihood_container.cpp  modelgraph.cpp  rule.cpp  yaml_description_database.cpp
CosmoBit/: README.md
CosmoBit/registration/: CosmoBit_registration.cpp
CosmoBit/src/: BBN.cpp
DarkBit/: README.md
DarkBit/examples/: DarkBit_standalone_MSSM.cpp  DarkBit_standalone_ScalarSingletDM_Z2.cpp  DarkBit_standalone_WIMP.cpp
DarkBit/registration/: DarkBit_registration.cpp
DarkBit/src/: Axions.cpp  Cascades.cpp  DMEFT.cpp  DMsimpVectorMedDiracDM.cpp  DMsimpVectorMedMajoranaDM.cpp  DMsimpVectorMedScalarDM.cpp  DMsimpVectorMedVectorDM.cpp  DarkBit.cpp  DarkBit_utils.cpp  DiracSingletDM.cpp  DirectDetection.cpp  IndirectDetectionYields.cpp  MSSM.cpp  MajoranaSingletDM.cpp  RelicDensity.cpp  ScalarSingletDM.cpp  SubGeVDM_SelfInteractions.cpp  SubGeVDM_fermion.cpp  SubGeVDM_scalar.cpp  SuperRenormHP.cpp  VectorSingletDM.cpp  WIMP_EFT.cpp
DecayBit/: README.md
DecayBit/examples/: 3bithit.cpp
DecayBit/registration/: DecayBit_registration.cpp
DecayBit/src/: DecayBit.cpp  decay_utils.cpp
Elements/: CMakeLists.txt
Elements/scripts/: module_harvester.py  standalone_facilitator.py
Elements/src/: decay_table.cpp  functors.cpp  ini_functions.cpp  mssm_slhahelp.cpp  spectrum.cpp  type_equivalency.cpp  virtual_higgs.cpp  virtual_photon.cpp
ExampleBit_A/: README.md
ExampleBit_A/examples/: ExampleBit_A_standalone_example.cpp
ExampleBit_A/registration/: ExampleBit_A_registration.cpp
ExampleBit_B/: README.md
ExampleBit_B/registration/: ExampleBit_B_registration.cpp
FlavBit/: README.md
FlavBit/examples/: FlavBit_standalone_example.cpp
FlavBit/registration/: FlavBit_registration.cpp
FlavBit/src/: FlavBit.cpp  Flav_reader.cpp
Logs/: CMakeLists.txt
Logs/src/: logmaster.cpp
Models/scripts/: model_harvester.py  particle_harvester.py
Models/src/: models.cpp
Models/src/SimpleSpectra/: MSSMSimpleSpec.cpp  SMSimpleSpec.cpp
Models/src/models/: MSSMatQ.cpp  MSSMatQ_mA.cpp  MSSMatQ_mA_mG.cpp  MSSMatQ_mG.cpp
NeutrinoBit/: README.md
NeutrinoBit/examples/: NeutrinoBit_standalone.cpp  NeutrinoBit_standalone_RHN.cpp
NeutrinoBit/registration/: NeutrinoBit_registration.cpp
ObjectivesBit/: README.md
ObjectivesBit/registration/: ObjectivesBit_registration.cpp
PrecisionBit/: README.md
PrecisionBit/registration/: PrecisionBit_registration.cpp
Printers/scripts/: printer_harvester.py
ScannerBit/python/: CMakeLists.txt
ScannerBit/python/cmake/: boost_python.cmake  boost_python_install.cmake  (+1 more)
ScannerBit/scripts/: list_scanners.py  scanner+_harvester.py
ScannerBit/src/: plugin_loader.cpp
SpecBit/: README.md
SpecBit/examples/: SpecBit_examples.cpp
SpecBit/registration/: SpecBit_registration.cpp
SpecBit/src/: SpecBit_MSSM.cpp  SpecBit_VS.cpp  SpecBit_tests.cpp
Utils/: CMakeLists.txt
Utils/scripts/: harvesting_tools.py  list_table.py
Utils/src/: ascii_dict_reader.cpp  ascii_table_reader.cpp  exceptions.cpp  slhaea_helpers.cpp  util_functions.cpp  yaml_parser_base.cpp
cmake/: FindCython.cmake  MacOSX.cmake  backends.cmake  cleaning.cmake  contrib.cmake  executables.cmake  externals.cmake  optional.cmake  python_scanners.cmake  utilities.cmake  warnings.cmake
cmake/scripts/: safe_dl.sh  update_cmakelists.py
config/: backend_locations.yaml.default  bibtex_entries.bib
contrib/preload/: gambit_preload.cpp
contrib/yaml-cpp-0.6.2/: CMakeLists.txt
doc/: link_time_registration.md
doc/link_time_registration_logs/: README.md
gum/: CMakeLists.txt  gum
gum/src/: cmake_variables.py.in  pythia.py
scripts/build_profiling/: action_plan.md  analyze_traces.py  binary_size.py  build_time_profile.sh  heavy_header_analysis.py  include_graph.py  plot_build_profile.py  plot_total_cost.py  preprocess_size.py
tools/: gamby  gamby2  gamby_overlay.py
yaml_files/: CMSSM.yaml  ColliderBit_CMSSM.yaml  MSSM7.yaml  MSSM9.yaml  NUHM1.yaml  NUHM2.yaml  paraprof_test.yaml  plot_spartan_5d_paraprof_2D.py  spartan.yaml  spartan_5d.yaml  spartan_issue_495.yaml
(+152 files in other folders)
